@@ -1,7 +1,12 @@
 tests:
-    - ping
-    - example/tests/cpu.pl
-    - memory
+    - 
+        code: ping
+        description: Checking the ping
+    - 
+        code: example/tests/cpu.pl
+        description: CPU test
+    -
+        code: memory
 parameters:
     ping_count: 10
 nodes:
