@@ -1,4 +1,11 @@
 Author: Pablo Fischer <pablo@pablo.com.mx>
+Date:   Mon Nov 23 22:23:06 2009 -0600
+
+    Now each test can be represented as a scalar (the name/filepath) or as
+    an array (of 2 items, first item of filepath and second for the
+    description). The same applies to test plans.
+
+Author: Pablo Fischer <pablo@pablo.com.mx>
 Date:   Mon Nov 23 19:47:23 2009 -0600
 
     To the details of each test we now have a new key: is_ok to know if the
